# testcmake

./: .gitmodules  CMakeLists.txt  NOTES
dependencies/: CMakeLists.txt
dependencies/imgui-files/: NOTE.txt
src/: main.cpp
